--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "walkme",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -12,12 +13,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uidotdev/usehooks": "^2.4.1",
+    "formik": "^2.4.6",
+    "http-proxy-middleware": "^3.0.0",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "react-uuid": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
