--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.4.6",
     "http-proxy-middleware": "^3.0.0",
     "json-server": "^1.0.0-beta.1",
+    "primereact": "^10.6.6",
     "react": "^18.3.1",
     "react-datepicker": "^7.0.0",
     "react-dom": "^18.3.1",
