--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "json-server": "^1.0.0-beta.1",
     "primereact": "^10.6.6",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-datepicker": "^7.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-uuid": "^2.0.0",
+    "reactstrap": "^9.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
