--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "^5.0.1",
     "react-uuid": "^2.0.0",
     "reactstrap": "^9.2.2",
+    "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
