--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@uidotdev/usehooks": "^2.4.1",
     "formik": "^2.4.6",
+    "framer-motion": "^11.2.12",
     "http-proxy-middleware": "^3.0.0",
     "json-server": "^1.0.0-beta.1",
     "primereact": "^10.6.6",
